Fixed Double Digits overlapping arrows

--- a/Resources/CSS/style.less
+++ b/Resources/CSS/style.less
@@ -707,7 +707,7 @@ h2 {
 
 		& h4 {
 			font-family:"title";
-			font-size:6.25em;
+			font-size:5em;
 			margin:0px;
 			margin-top:45px;
 			color:@white;
@@ -1032,7 +1032,7 @@ h2 {
 
 		& h4 {
 			font-family:"title";
-			font-size:6.25em;
+			font-size:5em;
 			margin:0px;
 			margin-top:45px;
 			color:@white;
